SERVER-13496 do not abort replication on secondaries when index name conflicts (via 2.4.9)